[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
clap = "4.0"
configfs-tsm = "0.0.2"
eyre = "0.6"
flate2 = "1.0"
hex = "0.4"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
dcap-qvl = "0.3"
tdx-quote = "0.0.4"
tdx_workload_attestation = "0.1.0"
thiserror = "1.0"
tokio = "1"
uuid = "1.0"
