[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
