[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
configfs-tsm = { workspace = true }
tdx_workload_attestation = { workspace = true, features = ["tdx-linux"] }
